univention-management-console-frontend (1.0.58-1) unstable; urgency=low  .    * added support for scrollbars in long server messages (Bug #22881)
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.0/ucs@27006 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/management/univention-management-console-frontend/css/style.css
+++ b/management/univention-management-console-frontend/css/style.css
@@ -320,5 +320,7 @@ form {
 /* special styling for server error messages in the dialog box */
 .umcServerErrorMessage {
 	color: #888;
+	overflow: auto;
+	max-height: 200px;
 }
 
